--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -181,4 +181,7 @@ jobs:
         keep_latest: 3
         delete_tags: true
       env:
-        GITHUB_TOKEN: ${{ secrets.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 }}
+        GITHUB_TOKEN: ${{ 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 }}
+     
+     #secrets.
+      
